[gd_scene load_steps=3 format=3 uid="uid://cott2t5ahccvc"]

[ext_resource type="Script" path="res://src/Menu/MenuButton.gd" id="1_rbyje"]

[sub_resource type="LabelSettings" id="LabelSettings_j3bvf"]
font_size = 128
font_color = Color(0.3, 0.3, 0.3, 1)

[node name="Button" type="Button"]
custom_minimum_size = Vector2(300, 150)
flat = true
script = ExtResource("1_rbyje")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(9, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -87.5
offset_bottom = 87.5
grow_horizontal = 0
grow_vertical = 2
label_settings = SubResource("LabelSettings_j3bvf")
horizontal_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
